--- a/src/css/App.css
+++ b/src/css/App.css
@@ -14,3 +14,12 @@ text-decoration: none;
 	display:flex;
 	gap:10px;
 }
+
+.Header {
+    width: 100%;
+    min-height: 100px;
+    background-color: #cecece5e;
+    align-items: center;
+    padding: 10px;
+    display: flex;
+}
