--- a/src/css/App.css
+++ b/src/css/App.css
@@ -73,8 +73,8 @@ a {
 .button {
 	outline: none;
     border: 0;
-    background: white;
-    color: #000;
-    padding: 14px;
+    background: #000;
+    color: #fff;
+    padding: 8px 16px;
     border-radius: 20px;
 }
