sign in / sign up  pages

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -131,3 +131,9 @@ display:block;
     border: 1px solid #400485;
     color: #400485;
 }
+
+
+.clq1z_a {
+font-weight:bold;
+font-size:18px !important;
+}
