--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,6 +5,7 @@ body {
 	margin:0;
 	padding:0;
 	color: #222 !important;
+	background-color: #cecece5e !important;
 }
 
 a { 
@@ -134,6 +135,76 @@ display:block;
 
 
 .clq1z_a {
-font-weight:bold;
-font-size:18px !important;
+	font-weight:bold;
+	font-size:18px !important;
+}
+
+
+
+.wrrpr1 {
+    max-width: 500px;
+    border-radius: 10px;
+    margin: 50px auto;
+    padding: 30px 40px;
+    box-shadow: 20px 20px 80px rgb(206, 206, 206);
+}
+
+
+.ttq_qq {
+text-align:center;
+}
+
+.pdng8 {
+padding-bottom: 8px;
+}
+
+.ttq_qq35q {
+margin-top:35px;
+}
+
+
+.dFle1 {
+    justify-content: center;
+    display:flex;
+    flex-wrap:nowrap;
+    gap:20px;
+}
+
+
+.fforHeadings {
+    font-size: 2rem;
+
+}
+
+.wrrpr1ForPriceLists {
+	max-width: 500px;
+    border-radius: 30px;
+    margin: 50px auto;
+    padding: 30px 40px;
+    background: rgb(255 255 255);
+}
+
+
+.sprice1 {
+    background: #000;
+    width: 100%;
+}
+
+
+.opacity {
+    opacity: 0.6;
+}
+
+
+.pp {
+	font-size: 20px;
+    font-weight: 500;
+    font-family: 'Manrope';
+}
+
+.ull_2 {
+	padding-left: 20px;
+    margin: 0;
+    margin-top: 0;
+    margin-bottom: 1rem;
 }
