--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,6 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css");
+
+
 body {
 	font-family: Roboto, Helvetica, Arial;
 	font-family: 'Manrope' !important;
@@ -21,17 +24,21 @@ a {
 
 .Header {
     width: 100%;
-    min-height: 100px;
-    background-color: #cecece5e;
+   /* min-height: 100px;*/
+    background-color: #fff;
     align-items: center;
     padding: 10px;
     display: flex;
 }
 
+.hdr_centerstyle div a {
+	font-family: 'ManropeMedium';
+}
+
 
 
 .hdr_centerstyle {
-    background-color: #fff;
+  /*  background-color: #fff;   */
     border-radius: 4rem;
     gap: 20px;
     display: flex;
@@ -48,6 +55,12 @@ a {
 }
 
 
+@font-face {
+	font-family: 'ManropeMedium';
+	src: url('../fonts/static/Manrope-Medium.ttf') format('truetype');
+	font-weight: normal;
+    font-style: normal
+}
 
 
 @font-face {
@@ -102,8 +115,8 @@ a {
 
 
 .centerization {
-text-align:center;
-display:block;
+	text-align:center;
+	display:block;
 }
 
 
@@ -207,4 +220,22 @@ margin-top:35px;
     margin: 0;
     margin-top: 0;
     margin-bottom: 1rem;
+}
+
+
+.usrComps {
+    justify-content: end;
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    height: 100%;
+}
+
+
+.xz_1 {
+
+	background: #e32b3a;
+    padding: 8px 10px;
+    border-radius: 6px;
+    color: #fff !important;
 }
