--- a/src/css/App.css
+++ b/src/css/App.css
@@ -239,3 +239,9 @@ margin-top:35px;
     border-radius: 6px;
     color: #fff !important;
 }
+
+
+.xz_forleftSidebar {
+background:#fff;
+padding:10px;
+}
