--- a/src/css/App.css
+++ b/src/css/App.css
@@ -71,6 +71,46 @@ a {
 }
 
 
+@font-face {
+	font-family: 'Manrope-Bold';
+	src: url('../fonts/static/Manrope-Bold.ttf') format('truetype');
+	font-weight: normal;
+    font-style: normal
+}
+
+
+@font-face {
+	font-style: normal;
+	font-weight: 100 700;
+	font-family: 'Material2';
+	src: url("../fonts/material/kJEhBvYX7BgnkSrUwT8OhrdQw4oELdPIeeII9v6oFsI.woff2") format('woff2');
+}
+
+
+.material-symbols-outlined {
+	font-family: 'Material';
+	font-size:20px;
+	vertical-align:middle;
+	letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    direction: ltr;
+	font-variation-settings: 'wght' 50;
+}
+
+
+.material-symbols-outlined2 {
+	font-family: 'Material2';
+	font-size:25px;
+	vertical-align:middle;
+	letter-spacing: normal;
+	text-transform: none;
+	display: inline-block;
+	direction: ltr;
+	font-variation-settings: 'wght' 200;
+}
+
+
 
 .jcenter {
     justify-content: center;
@@ -242,6 +282,6 @@ margin-top:35px;
 
 
 .xz_forleftSidebar {
-background:#fff;
-padding:10px;
+	background:#fff;
+	padding:10px;
 }
